Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0
-
None
-
Win7 32 + Qt 5.0
-
34c240289a8682b60d5a61670e1d330d630e1f93
Description
QFileDialog::saveState()/QFileDialog::restoreState does not restore the current directory. Steps to reproduce (qtbug2855.tar):
- Run qtbug2855.tar below
- Click "Open" button
- Change size of dialog, change current directory
- Close dialog
- Click "Open" button again -home directory again.
- Run qtbug2855.tar with command line option -n (no native dialogs):
Notice that it works now.
Attachments
Issue Links
- replaces
-
QTBUG-33328 CLONE - QFileDialog::saveState,restoreState doesn't restore the current directory
-
- Closed
-